Edited Users, added prices
