# routes/api/api_v1.php
@@ -3,6 +3,20 @@
 //    return response()->json(['data'=>['message'=>'Hello! You are success authenticate']]);
 //});
 
-Route::middleware(['auth:api'])->resource('users', \App\Http\Controllers\Api\V1\UserController::class);
+Route::resource('users', \App\Http\Controllers\Api\V1\UserController::class)
+    ->only('index', 'show')
+    ->middleware(['auth:api']);
+Route::resource('users', \App\Http\Controllers\Api\V1\UserController::class)
+    ->only('update', 'destroy')
+    ->middleware(['auth:api', 'owner']);
 
-Route::resource('service', \App\Http\Controllers\Api\V1\ServiceController::class);
+Route::resource('users/{user}/prices', \App\Http\Controllers\Api\V1\PriceController::class)
+    ->only('index', 'show')
+    ->middleware(['auth:api']);
+Route::resource('users/{user}/prices', \App\Http\Controllers\Api\V1\PriceController::class)
+    ->only('store', 'update', 'destroy')
+    ->middleware(['auth:api', 'owner']);
+
+Route::resource('services', \App\Http\Controllers\Api\V1\ServiceController::class)
+    ->only('index')
+    ->middleware(['auth:api']);
