# storage/api-docs/api-docs.json
@@ -1,13 +1,23 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Swagger docs for Appo API",
-        "description": "This is a Appo Server based on the OpenAPI 3.0 specification. \n\nSome useful links:\n- [The API repository](https://github.com/KateKoltsova/Appo)\n- [The API server](https://appobeauty-6ecbc596ee8d.herokuapp.com/api)",
+        "title": "Swagger docs for Appo Beauty API",
+        "description": "This is a Appo Beauty Server based on the OpenAPI 3.0 specification. \n\nSome useful links:\n- [The API repository](https://github.com/KateKoltsova/Appo)\n- [The API server](https://appobeauty-6ecbc596ee8d.herokuapp.com/api)",
         "contact": {
             "email": "kate.koltsova.work@gmail.com"
         },
         "version": "1.0.0"
     },
+    "servers": [
+        {
+            "url": "https://appobeauty-6ecbc596ee8d.herokuapp.com/api",
+            "description": "Production API server"
+        },
+        {
+            "url": "https://appobeauty-6ecbc596ee8d.herokuapp.com",
+            "description": "Web Interface"
+        }
+    ],
     "tags": [
         {
             "name": "auth",
@@ -18,12 +28,12 @@
             "description": "CRUD operations with users (работает)"
         },
         {
-            "name": "prices",
-            "description": "CRUD operations with prices (в процессе)"
+            "name": "user prices",
+            "description": "CRUD operations with prices (работает)"
         },
         {
             "name": "services",
-            "description": "CRUD operations with services (пока только получение списка услуг)"
+            "description": "CRUD operations with services (в процессе, пока только получение списка услуг)"
         }
     ],
     "paths": {
@@ -503,7 +513,7 @@
                         "required": false,
                         "schema": {
                             "type": "string",
-                            "example": "1111-01-01T00:00:00.000Z"
+                            "example": "1111-01-01"
                         }
                     },
                     {
@@ -616,22 +626,41 @@
                 }
             }
         },
-        "/v1/prices": {
+        "/v1/users/{user}/prices": {
             "get": {
                 "tags": [
-                    "prices"
+                    "user prices"
                 ],
                 "summary": "Get list of prices specified master",
                 "description": "Send request to get full list of prices specified master",
+                "security": [
+                    {
+                        "access_token": [
+                            "create:users",
+                            "read:users",
+                            "update:users",
+                            "delete:users"
+                        ]
+                    }
+                ],
                 "parameters": [
                     {
-                        "name": "master_id",
-                        "in": "query",
-                        "description": "Master id for filtration",
+                        "name": "user",
+                        "in": "path",
+                        "description": "Master ID",
                         "required": true,
                         "schema": {
                             "type": "integer",
                             "example": 15
+                        }
+                    },
+                    {
+                        "name": "access_token",
+                        "in": "header",
+                        "description": "Access token",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/securitySchemes/access_token"
                         }
                     }
                 ],
@@ -649,18 +678,28 @@
                 }
             }
         },
-        "/v1/prices/{id}": {
+        "/v1/users/{user}/prices/{price}": {
             "get": {
                 "tags": [
-                    "prices"
+                    "user prices"
                 ],
                 "summary": "Find price by ID",
                 "description": "Returns a specified master price by ID",
+                "security": [
+                    {
+                        "access_token": [
+                            "create:users",
+                            "read:users",
+                            "update:users",
+                            "delete:users"
+                        ]
+                    }
+                ],
                 "parameters": [
                     {
-                        "name": "id",
+                        "name": "user",
                         "in": "path",
-                        "description": "price ID",
+                        "description": "Master ID",
                         "required": true,
                         "schema": {
                             "type": "integer",
@@ -668,13 +707,22 @@
                         }
                     },
                     {
-                        "name": "master_id",
-                        "in": "query",
-                        "description": "Master id for filtration",
+                        "name": "price",
+                        "in": "path",
+                        "description": "Price id",
                         "required": true,
                         "schema": {
                             "type": "integer",
                             "example": 15
+                        }
+                    },
+                    {
+                        "name": "access_token",
+                        "in": "header",
+                        "description": "Access token",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/securitySchemes/access_token"
                         }
                     }
                 ],
@@ -703,18 +751,38 @@
             },
             "patch": {
                 "tags": [
-                    "prices"
+                    "user prices"
                 ],
                 "summary": "Update price",
                 "description": "Update specified master price",
+                "security": [
+                    {
+                        "access_token": [
+                            "create:users",
+                            "read:users",
+                            "update:users",
+                            "delete:users"
+                        ]
+                    }
+                ],
                 "parameters": [
                     {
-                        "name": "id",
+                        "name": "user",
                         "in": "path",
-                        "description": "price ID",
+                        "description": "Master ID",
                         "required": true,
                         "schema": {
                             "type": "integer",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "priceId",
+                        "in": "path",
+                        "description": "Price ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
                             "example": 1
                         }
                     },
@@ -729,13 +797,12 @@
                         }
                     },
                     {
-                        "name": "master_id",
-                        "in": "query",
-                        "description": "Master id for filtration",
+                        "name": "access_token",
+                        "in": "header",
+                        "description": "Access token",
                         "required": true,
                         "schema": {
-                            "type": "integer",
-                            "example": 15
+                            "$ref": "#/components/securitySchemes/access_token"
                         }
                     }
                 ],
@@ -764,29 +831,48 @@
             },
             "delete": {
                 "tags": [
-                    "prices"
+                    "user prices"
                 ],
                 "summary": "Delete user specified price",
                 "description": "Deleted user specified price",
+                "security": [
+                    {
+                        "access_token": [
+                            "create:users",
+                            "read:users",
+                            "update:users",
+                            "delete:users"
+                        ]
+                    }
+                ],
                 "parameters": [
                     {
-                        "name": "id",
+                        "name": "user",
                         "in": "path",
-                        "description": "The id that needs to be deleted",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "example": 15
-                        }
-                    },
-                    {
-                        "name": "master_id",
-                        "in": "query",
-                        "description": "Master id for filtration",
+                        "description": "Master ID",
                         "required": true,
                         "schema": {
                             "type": "integer",
                             "example": 15
+                        }
+                    },
+                    {
+                        "name": "price",
+                        "in": "path",
+                        "description": "Price ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 15
+                        }
+                    },
+                    {
+                        "name": "access_token",
+                        "in": "header",
+                        "description": "Access token",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/securitySchemes/access_token"
                         }
                     }
                 ],
@@ -813,16 +899,25 @@
                     "services"
                 ],
                 "summary": "Get list of services",
-                "description": "Send request to get full list of services",
+                "description": "You can get full list of services",
+                "security": [
+                    {
+                        "access_token": [
+                            "create:users",
+                            "read:users",
+                            "update:users",
+                            "delete:users"
+                        ]
+                    }
+                ],
                 "parameters": [
                     {
-                        "name": "filter[category]",
-                        "in": "query",
-                        "description": "Service category for filtration",
-                        "required": false,
+                        "name": "access_token",
+                        "in": "header",
+                        "description": "Access token",
+                        "required": true,
                         "schema": {
-                            "type": "string",
-                            "example": "Nails"
+                            "$ref": "#/components/securitySchemes/access_token"
                         }
                     }
                 ],
@@ -831,8 +926,26 @@
                         "description": "OK",
                         "content": {
                             "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Services"
+                                "example": {
+                                    "data": {
+                                        "categories": [
+                                            "Nails",
+                                            "Brows",
+                                            "Lashes"
+                                        ],
+                                        "services": [
+                                            {
+                                                "id": 1,
+                                                "title": "Eyelash extension classic",
+                                                "category": "Lashes"
+                                            },
+                                            {
+                                                "id": 1,
+                                                "title": "Eyelash extension 2D-3D",
+                                                "category": "Lashes"
+                                            }
+                                        ]
+                                    }
                                 }
                             }
                         }
@@ -926,13 +1039,13 @@
                         "type": "integer",
                         "example": 1
                     },
-                    "master_id": {
-                        "type": "integer",
-                        "example": 1
+                    "title": {
+                        "type": "string",
+                        "example": "Brows coloring"
                     },
-                    "service_id": {
-                        "type": "integer",
-                        "example": 1
+                    "category": {
+                        "type": "string",
+                        "example": "Brows"
                     },
                     "price": {
                         "type": "integer",
